--- a/README
+++ b/README
@@ -4,15 +4,26 @@
 - Colocar o dump no diretório `/database`
 - Colocar os arquivos do wordpress no diretório `/files`
 - Iniciar o container. A primeira instalação deve criar o banco e popular com os dados do dump
-- Entrar no arquivo wp_config e alterar dados de conexão, links e prefixo do database (para corresponder com o arquivo de dump)
-- Atenção - Import do dump traz os usuários da aplicação 
-- Instalar o plugin do elementor de https://proelements.org/
+- Entrar no arquivo `wp-config.php`` e alterar dados de conexão, links e prefixo do database (para corresponder com o arquivo de dump)
+- Necessário plugin do elementor
+- Instalar o plugin Pro Elements https://proelements.org/
   - Necessário antes adicionar arquivo `.htaccess` no mesmo diretório do arquivo `wp-config.php` com o conteúdo:
     ```
     php_value upload_max_filesize 512M
     php_value post_max_size 1024M
     ```
-- Container usa 
+- Alterar URLs (https://url = url de onde veio a cópia de ambiente)
+  ```
+  update <prefixo>_posts 
+     set guid = replace(guid, 'https://url','http://localhost:8000')
+   where guid like '%https://url%';
+
+  update <prefixo>_options 
+     set option_value = replace(option_value , 'https://url','http://localhost:8000')
+   where option_value like '%https://url%';
+
+  ```
+- Alterar as URLs (ex: redirecionamentos) Elementor > Tools > Replace URL
 
 ## Documentação oficial da imagem Docker
 ### MySql
